--- a/api/build.gradle
+++ b/api/build.gradle
@@ -26,10 +26,8 @@ dependencies {
 	implementation 'org.postgresql:postgresql:42.2.24'
 	implementation 'org.flywaydb:flyway-core:7.15.0'
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
+    implementation 'junit:junit:4.13.1'
 	compileOnly 'org.projectlombok:lombok'
-	annotationProcessor 'org.projectlombok:lombok'
-	testCompileOnly 'org.projectlombok:lombok'
-	testAnnotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'com.h2database:h2:1.4.200'
 }
