--- a/api/build.gradle
+++ b/api/build.gradle
@@ -19,16 +19,16 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-webflux'
-	implementation 'org.springframework.boot:spring-boot-starter-validation:2.4.0'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.postgresql:postgresql:42.2.24'
-	implementation 'org.flywaydb:flyway-core:7.15.0'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.5'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux:2.5.5'
+	implementation 'org.springframework.boot:spring-boot-starter-validation:2.5.5'
+	implementation 'org.springframework.boot:spring-boot-starter-web:2.5.5'
+	implementation 'org.postgresql:postgresql:42.2.24.jre7'
+	implementation 'org.flywaydb:flyway-core:8.0.1'
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
-    implementation 'junit:junit:4.13.1'
-	compileOnly 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'junit:junit:4.13.2'
+	compileOnly 'org.projectlombok:lombok:1.18.22'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.5'
 	testImplementation 'com.h2database:h2:1.4.200'
 }
 
